# cpp-d4

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  meson.build  meson_options.txt
.github/workflows/: test.yml
app/: main.cpp  readxyz.cpp
include/: dftd_cblas.h  dftd_cutoff.h  dftd_damping.h  dftd_dispersion.h  dftd_econv.h  dftd_eeq.h  dftd_eeq_param.h  dftd_geometry.h  dftd_matrix.h  dftd_model.h  dftd_multicharge_param.h  dftd_ncoord.h  dftd_parameters.h  dftd_readxyz.h  qceeq_param.h
include/damping/: dftd_atm.h  dftd_rational.h
scripts/: README.md  make-qcdftd4.sh  make-qcdftd4param.sh  make-qceeq.sh  make-qcncoord.sh
src/: dftd_cutoff.cpp  dftd_damping.cpp  dftd_dispersion.cpp  dftd_eeq.cpp  dftd_model.cpp  dftd_ncoord.cpp  dftd_readxyz.cpp  program_dftd.cpp
src/damping/: atm.cpp  dftd_atm.cpp  dftd_rational.cpp  rational.cpp
test/: main.cpp  meson.build  molecules.cpp  molecules.h  test_disp.cpp  test_disp.h  test_disp2.cpp  test_disp2.h  test_ghost.cpp  test_ghost.h  test_grad.cpp  test_grad.h  test_multi.cpp  test_multi.h  test_ncoord.cpp  test_ncoord.h  test_param.cpp  test_param.h  util.cpp  util.h
